feat: Estruturaçao inicial de estilo da pagina

--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
     <title>Treine me</title>
     <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
-    <div id="page">
+    <div class="page">
       <header>
         <img src="./assets/logo.svg" alt="Treine.me" />
+
         <nav>
           <ul>
             <li>Home</li>
@@ -39,7 +46,11 @@
           alt="Desenho de uma mulher se exercitando"
         />
       </main>
-      <footer></footer>
+      <footer>fale concosco no instagram <strong>@treine.me</strong></footer>
     </div>
+    <img
+      src="./assets/balls.svg"
+      alt="Grupo de bolinhas na parte inferior da tela"
+    />
   </body>
 </html>
